fixed layout shift, added new bgs

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ p a {
     text-decoration: none;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 .event-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
